--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.4"
+    "mongoose": "^8.9.4",
+    "nodemon": "^3.1.9"
   },
   "scripts": {
     "start": "nodemon server.js"
