--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.4.1",
     "lucide-react": "^0.474.0",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.4"
@@ -30,7 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.1",
+    "tailwindcss": "^4.0.5",
     "vite": "^6.0.5"
   }
 }
